# iree

./: .gitignore
.github/workflows/: pkgci_test_pjrt_metal.yml
build_tools/testing/: run_jax_tests.sh
compiler/: pyproject.toml  setup.py
compiler/plugins/input/StableHLO/Conversion/: CMakeLists.txt  Passes.cpp  Passes.td  StableHLOCholeskyToLinalg.cpp
compiler/src/iree/compiler/Codegen/ExternalDispatch/: CMakeLists.txt  LinalgMatmulToDenseBlas.cpp  PassRegistration.cpp  Passes.h  Passes.td  SparseCholeskySolver.cpp
compiler/src/iree/compiler/Codegen/LLVMGPU/Utils/: ROCDLPrefetchSharedMemoryCopy.cpp
compiler/src/iree/compiler/Codegen/LLVMGPU/test/: prefetch_shared_memory.mlir
compiler/src/iree/compiler/Dialect/HAL/Transforms/: OutlineMemoizeRegions.cpp
compiler/src/iree/compiler/Dialect/Stream/Transforms/: ElideTimepoints.cpp
compiler/src/iree/compiler/InputConversion/Common/: CMakeLists.txt  ExtractJaxDonationMetadata.cpp  Passes.cpp  Passes.td
compiler/src/iree/compiler/Modules/DenseBlas/: CMakeLists.txt  dense_blas.imports.mlir
integrations/pjrt/: requirements.txt
integrations/pjrt/cmake/: protobuf_cc_library.cmake
integrations/pjrt/python_packages/_setup_support/: iree_pjrt_setup.py
integrations/pjrt/python_packages/iree_cuda_plugin/: pyproject.toml  setup.py
integrations/pjrt/python_packages/iree_metal_plugin/: pyproject.toml  setup.py
integrations/pjrt/python_packages/iree_metal_plugin/jax_plugins/iree_metal/: __init__.py
integrations/pjrt/src/: CMakeLists.txt
integrations/pjrt/src/iree_pjrt/common/: api_impl.cc  api_impl.h  iree_compiler.cc
integrations/pjrt/src/iree_pjrt/metal/: CMakeLists.txt  client.cc  client.h  dylib_entry_point.cc
integrations/pjrt/test/: metal_expected_passing.txt  setup_local_test_env.sh  test_metal.py  triage_jaxtest.py
integrations/pjrt/test/patches/: jax_api_test.patch
runtime/: pyproject.toml
runtime/src/iree/hal/drivers/metal/: executable.h
runtime/src/iree/modules/dense_blas/: CMakeLists.txt  exports.inl  gemm_metal.h  gemm_metal.mm  hal_buffer_helper.c  hal_buffer_helper.h  hal_buffer_helper_metal.m  module.c  module.h
runtime/src/iree/modules/dense_blas/backends/: accelerate.c  accelerate.h  mps.h  mps.m
runtime/src/iree/modules/hal/: module.c
runtime/src/iree/modules/sparse_solver/: CMakeLists.txt  baspacho_wrapper.cpp  baspacho_wrapper.h  exports.inl  module.c  module.h
runtime/src/iree/vm/: shims.c  shims.h
