[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake",
    "ninja!=1.13.0",
    "numpy>=2.0.0b1",
    "packaging",
    "ml_dtypes>=0.5.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "iree-base-runtime"
dynamic = ["version"]
description = "IREE Runtime Python API"
license = "Apache-2.0"
authors = [
    {name = "The IREE Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "ml_dtypes",
]

[project.urls]
Homepage = "https://iree.dev"
Repository = "https://github.com/iree-org/iree"
